--- a/articles.html
+++ b/articles.html
@@ -101,6 +101,13 @@
     flex: 1 1 auto;
 }
 
+#articleModalImage {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+}
+
 
 </style>
 
