--- a/articles.html
+++ b/articles.html
@@ -69,10 +69,10 @@
     flex-direction: column;
   }
   
-  .card-img-top {
+  /* .card-img-top {
     height: 200px;
     object-fit: cover;
-  }
+  } */
   
   .card-title {
     height: 3.5rem;
@@ -101,7 +101,7 @@
     flex: 1 1 auto;
 }
 
-#articleModalImage {
+.card-img-top, #articleModalImage {
     object-fit: cover;
     width: 100%;
     height: 100%;
