--- a/articles.html
+++ b/articles.html
@@ -107,6 +107,16 @@
     height: 100%;
     background-position: center center;
 }
+.overlay::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6); /* Adjust the 0.6 as needed */
+}
 
 
 </style>
@@ -140,11 +150,11 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body" id="articleModalContent">
-                    <div class="modal-image-container position-relative">
+                    <div class="modal-image-container position-relative overlay">
                         <img src="" class="img-fluid w-100" id="articleModalImage" alt="Article Image">
                         <h2 class="modal-title text-white mb-0 position-absolute top-50 start-50 translate-middle" id="articleModalLabel">Article Title</h2>
                     </div>
-                    <div class="modal-text-container mt-1"> <!-- Change this line -->
+                 <div class="modal-text-container mt-1"> <!-- Change this line -->
                         <div class="d-flex justify-content-between">
                             <div id="articleModalTags" class="d-flex flex-wrap gap-2"></div>
                             <div class="text-muted" id="articleModalDate"></div>
