--- a/articles.html
+++ b/articles.html
@@ -117,7 +117,14 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.6); /* Adjust the 0.6 as needed */
 }
-
+.card-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+}
 
 </style>
 
@@ -287,25 +294,29 @@
                     }
                 }
 
-            function appendArticle(id, imageUrl, title, content, tagsHtml, tags, date) {
-                const encodedContent = encodeURIComponent(content);
-                const cardHtml = `
-                <div class="col-md-4 mb-3">
-                    <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
-                       <img src="placeholder.jpg" data-src="${imageUrl}" class="card-img-top lazyload" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title article-title">${title}</h5>
-                            <p class="card-text">${content.substring(0, 100)}...</p>
-                        </div>
-                        <div class="card-footer">
-                            ${tagsHtml}
-                            <span class="text-muted ms-2">${date}</span>
+                function appendArticle(id, imageUrl, title, content, tagsHtml, tags, date) {
+                    const encodedContent = encodeURIComponent(content);
+                    const cardHtml = `
+                    <div class="col-md-4 mb-3">
+                        <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
+                            <div class="card-img-top overlay" style="background-image: url('${imageUrl}');">
+                                <div class="card-overlay">
+                                    <h5 class="card-title article-title">${title}</h5>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">${content.substring(0, 100)}...</p>
+                            </div>
+                            <div class="card-footer">
+                                ${tagsHtml}
+                                <span class="text-muted ms-2">${date}</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                `;
-                $("#articles-container").append(cardHtml);
-            }
+                    `;
+                    $("#articles-container").append(cardHtml);
+                }
+
 
         });
     </script>
