--- a/articles.html
+++ b/articles.html
@@ -69,11 +69,6 @@
     flex-direction: column;
   }
   
-  /* .card-img-top {
-    height: 200px;
-    object-fit: cover;
-  } */
-  
   .card-title {
     height: 3.5rem;
     overflow: hidden;
@@ -107,6 +102,14 @@
     height: 100%;
     background-position: center center;
 }
+.overlay {
+    position: relative;
+    display: block;
+    background-size: cover;
+    height: 200px;  /* Set to the height of your images */
+    overflow: hidden;
+}
+
 .overlay::before {
     content: '';
     display: block;
@@ -117,6 +120,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.6); /* Adjust the 0.6 as needed */
 }
+
 .card-overlay {
     position: absolute;
     top: 50%;
@@ -125,6 +129,7 @@
     color: white;
     text-align: center;
 }
+
 
 </style>
 
@@ -299,7 +304,7 @@
                     const cardHtml = `
                     <div class="col-md-4 mb-3">
                         <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
-                            <div class="card-img-top overlay" style="background-image: url('${imageUrl}');">
+                            <div class="overlay" style="background-image: url('${imageUrl}');">
                                 <div class="card-overlay">
                                     <h5 class="card-title article-title">${title}</h5>
                                 </div>
@@ -316,6 +321,7 @@
                     `;
                     $("#articles-container").append(cardHtml);
                 }
+
 
 
         });
