--- a/articles.html
+++ b/articles.html
@@ -41,7 +41,9 @@
   }
   .modal-image-container {
     position: relative;
-    height: 50vh;
+    height: 200px; /* or whatever height you want */
+    width: 100%; /* ensure it takes full width */
+    overflow: hidden;
   }
   .modal-text-container {
     position: relative;
