--- a/articles.html
+++ b/articles.html
@@ -132,7 +132,31 @@
     text-align: center;
 }
 
+#header {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1); /* Adjust the opacity value */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  /* position: top; */
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
 
+/* Style the header icon and text container */
+.header-content {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+/* Style the header text */
+#header h1 {
+  color: whitesmoke;
+  margin: 0;
+  padding-left: 10px;
+}
 </style>
 
     <link rel="stylesheet" href="CSS/articles.css">
