--- a/articles.html
+++ b/articles.html
@@ -100,8 +100,8 @@
 
 .card-img-top, #articleModalImage {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     background-position: center center;
 }
 .overlay {
@@ -198,7 +198,7 @@ body {
         </div>
     </div>
     <div class="hero">
-        <h1>Enjoy curated AI aenerated articles on a wide range of topics<h1>
+        <h1>Enjoy curated AI created articles on a wide range of topics<h1>
     </div>
 
     <div class="container mt-5">
