--- a/articles.html
+++ b/articles.html
@@ -39,7 +39,9 @@
     overflow-y: auto;
     flex: 1 1 auto;
   }
-
+  .modal-image-container {
+    position: relative;
+    height: 50vh;
   }
   .modal-text-container {
     position: relative;
@@ -67,6 +69,11 @@
     flex-direction: column;
   }
   
+  /* .card-img-top {
+    height: 200px;
+    object-fit: cover;
+  } */
+  
   .card-title {
     height: 3.5rem;
     overflow: hidden;
@@ -93,26 +100,13 @@
     overflow-y: auto;
     flex: 1 1 auto;
 }
-.modal-image-container {
-    position: relative;
-    /* height: 200px; /* or whatever height you want */
-    /* width: 100%; ensure it takes full width */ */
-    overflow: hidden;
-}  
+
 .card-img-top, #articleModalImage {
     object-fit: cover;
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
     background-position: center center;
 }
-.overlay {
-    position: relative;
-    display: block;
-    background-size: cover;
-    /* height: 200px;  Set to the height of your images */
-    overflow: hidden;
-}
-
 .overlay::before {
     content: '';
     display: block;
@@ -124,65 +118,7 @@
     background-color: rgba(0, 0, 0, 0.6); /* Adjust the 0.6 as needed */
 }
 
-.card-overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    text-align: center;
-}
 
-#header {
-  display: flex;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.1); /* Adjust the opacity value */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  /* position: top; */
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-/* Style the header icon and text container */
-.header-content {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-}
-
-/* Style the header text */
-#header h1 {
-  color: whitesmoke;
-  margin: 0;
-  padding-left: 10px;
-}
-body {
-  background-image: linear-gradient(149deg,
-   rgba(85, 85, 85, 0.05) 0%, rgba(85, 85, 85, 0.05) 25%,rgba(11, 11, 11, 0.05) 25%,
-    rgba(11, 11, 11, 0.05) 50%,rgba(182, 182, 182, 0.05) 50%, rgba(182, 182, 182, 0.05) 75%,
-    rgba(28, 28, 28, 0.05) 75%, rgba(28, 28, 28, 0.05) 100%),linear-gradient(232deg,
-     rgba(145, 145, 145, 0.05) 0%, rgba(145, 145, 145, 0.05) 25%,rgba(165, 165, 165, 0.05) 25%,
-      rgba(165, 165, 165, 0.05) 50%,rgba(84, 84, 84, 0.05) 50%, rgba(84, 84, 84, 0.05) 75%,
-      rgba(131, 131, 131, 0.05) 75%, rgba(131, 131, 131, 0.05) 100%),linear-gradient(321deg, 
-      rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 25%,rgba(249, 249, 249, 0.05) 25%,
-       rgba(249, 249, 249, 0.05) 50%,rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0.05) 75%,
-       rgba(104, 104, 104, 0.05) 75%, rgba(104, 104, 104, 0.05) 100%),linear-gradient(90deg, rgb(21, 8, 116),rgb(111, 197, 250)); 
-  min-height: 100vh;
-}
-
-/* Style the header title */
-.header-title {
-  color: white;
-  text-align: center;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: auto;
-  max-width: 800px; /* Adjust this value based on the desired maximum width */
-}
 </style>
 
     <link rel="stylesheet" href="CSS/articles.css">
@@ -199,7 +135,7 @@ body {
         </div>
     </div>
     <div class="hero">
-        <h1>Enjoy curated AI created articles on a wide range of topics<h1>
+        <h1>Enjoy curated AI aenerated articles on a wide range of topics<h1>
     </div>
 
     <div class="container mt-5">
@@ -351,30 +287,25 @@ body {
                     }
                 }
 
-                function appendArticle(id, imageUrl, title, content, tagsHtml, tags, date) {
-                    const encodedContent = encodeURIComponent(content);
-                    const cardHtml = `
-                    <div class="col-md-4 mb-3">
-                        <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
-                            <div class="overlay" style="background-image: url('${imageUrl}');">
-                                <div class="card-overlay">
-                                    <h5 class="card-title article-title">${title}</h5>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <p class="card-text">${content.substring(0, 100)}...</p>
-                            </div>
-                            <div class="card-footer">
-                                ${tagsHtml}
-                                <span class="text-muted ms-2">${date}</span>
-                            </div>
+            function appendArticle(id, imageUrl, title, content, tagsHtml, tags, date) {
+                const encodedContent = encodeURIComponent(content);
+                const cardHtml = `
+                <div class="col-md-4 mb-3">
+                    <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
+                       <img src="placeholder.jpg" data-src="${imageUrl}" class="card-img-top lazyload" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title article-title">${title}</h5>
+                            <p class="card-text">${content.substring(0, 100)}...</p>
+                        </div>
+                        <div class="card-footer">
+                            ${tagsHtml}
+                            <span class="text-muted ms-2">${date}</span>
                         </div>
                     </div>
-                    `;
-                    $("#articles-container").append(cardHtml);
-                }
-
-
+                </div>
+                `;
+                $("#articles-container").append(cardHtml);
+            }
 
         });
     </script>
