--- a/articles.html
+++ b/articles.html
@@ -181,7 +181,7 @@ body {
                  <div class="modal-text-container mt-1"> <!-- Change this line -->
                         <div class="d-flex justify-content-between">
                             <div id="articleModalTags" class="d-flex flex-wrap gap-2"></div>
-                            <div class="text-muted" id="articleModalDate"></div>
+                            <!-- <div class="text-muted" id="articleModalDate"></div> -->
                         </div>
                         <div id="articleContent" class="mt-3"></div>
                     </div>
