--- a/articles.html
+++ b/articles.html
@@ -142,7 +142,14 @@ body {
   margin-right: auto;
   max-width: 800px; /* Adjust this value based on the desired maximum width */
 }
+/* Style the main headings */
+h1, h2{
+  color: #eeeeee;
 
+  font-size: 2.2rem;
+  margin-left: 50px;
+  
+}
 </style>
 
     <link rel="stylesheet" href="CSS/articles.css">
