--- a/articles.html
+++ b/articles.html
@@ -130,7 +130,9 @@ body {
        rgba(104, 104, 104, 0.05) 75%, rgba(104, 104, 104, 0.05) 100%),linear-gradient(90deg, rgb(21, 8, 116),rgb(111, 197, 250)); 
   min-height: 100vh;
 }
-
+.custom-header {
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
+    }
 /* Style the header title */
 .header-title {
   color: white;
