--- a/articles.html
+++ b/articles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    modal-text-<head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPress Articles</title>
@@ -157,16 +157,18 @@ h1, h2{
     <link rel="stylesheet" href="CSS/articles.css">
 </head>
 <body>
-    <div id="header">
+    <div id="header" class="custom-header">
         <div class="header-content">
-            <a href="index.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
-                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
-                </svg>
-            </a>
-            <h1>Articles</h1>
+          <!-- Wrap the house icon in an anchor tag -->
+          <a href="index.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="white" class="bi bi-house" viewBox="0 0 16 16">
+              <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+            </svg>
+          </a>
+          <h1>Articles</h1>
         </div>
-    </div>
+    
+
     <div class="hero">
         <h1>Enjoy curated AI aenerated articles on a wide range of topics<h1>
     </div>
@@ -190,7 +192,6 @@ h1, h2{
                  <div class="modal-text-container mt-1"> <!-- Change this line -->
                         <div class="d-flex justify-content-between">
                             <div id="articleModalTags" class="d-flex flex-wrap gap-2"></div>
-                            <!-- <div class="text-muted" id="articleModalDate"></div> -->
                         </div>
                         <div id="articleContent" class="mt-3"></div>
                     </div>
